--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,24 +3,13 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "copernicus-utils"
+name = "sputnik"
 version = "0.1.0"
-description = "Utilities for retrieving Copernicus access tokens."
+description = ""
 readme = "README.md"
-requires-python = ">=3.9"
-authors = [
-  {name = "Unknown"}
-]
+requires-python = ">=3.11"
 license = {text = "MIT"}
 dependencies = [
   "requests>=2.0",
   "PyYAML>=6.0"
 ]
-
-[project.urls]
-Homepage = "https://example.com/copernicus-utils"
-Repository = "https://example.com/copernicus-utils.git"
-
-[tool.setuptools]
-packages = ["copernicus_utils"]
-
