--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,12 @@ version = "0.1.0"
 description = ""
 readme = "README.md"
 requires-python = ">=3.11"
-license = {text = "MIT"}
 dependencies = [
   "requests>=2.0",
-  "PyYAML>=6.0"
+  "PyYAML>=6.0",
+  "Pillow==11.1.0"
 ]
+
+[tool.setuptools.packages.find]
+include = ["copernicus_utils*"]
+exclude = ["data*", "tests*"]
