--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = ">=3.11"
 dependencies = [
   "requests>=2.0",
   "PyYAML>=6.0",
-  "Pillow==11.1.0"
+  "Pillow==11.1.0",
+  "rasterio>=1.4.3",
 ]
 
 [tool.setuptools.packages.find]
