--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,12 @@ dependencies = [
   "PyYAML>=6.0",
   "Pillow==11.1.0",
   "rasterio>=1.4.3",
+  "fastapi>=0.111.0",
+  "torch>=2.3.0",
+  "transformers>=4.38.0",
+  "uvicorn[standard]>=0.30.0",
 ]
 
 [tool.setuptools.packages.find]
-include = ["copernicus_utils*"]
+include = ["copernicus_utils*", "analysis*"]
 exclude = ["data*", "tests*"]
