--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,11 @@ dependencies = [
   "rasterio>=1.4.3",
   "fastapi>=0.111.0",
   "uvicorn[standard]>=0.30.0",
+  "pandas>=2.3.3",
+  "numpy>=2.3.4",
+  "torch>=2.9.0",
+  "matplotlib>=3.10.7",
+  "scikit-learn>=1.7.2",
 ]
 
 [tool.setuptools.packages.find]
